# Fast_project_build

./: .gitignore  README.md  create_exe.py  fastproject.py  pyproject.toml
src/fastbuild_ricgary/: fastbuild.py
src/helper/: check_imports.py
src/utils/: color_text.py  create_files.py  read_config.py
