[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastbuild_ricgary"
version = "0.0.1"
authors = [
  { name="Eric Naiber", email="ericnaiber@gmail.com" },
]
description = "Package to setup new projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RicGary/Fast_project_build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastbuild_ricgary"]